# options-earnings-lab

./: LICENSE  README.md  pyproject.toml
examples/: msft_implied_move_from_chain.py
src/options_earnings_lab/: __init__.py  cli.py  event_study.py  metrics.py
tests/: test_event_study.py  test_metrics.py
